[gd_scene load_steps=15 format=3 uid="uid://b8w8gjucf6srp"]

[ext_resource type="Script" path="res://scenes/television.gd" id="1_t1jwo"]
[ext_resource type="Texture2D" uid="uid://djeerck0xmyyr" path="res://sprites/tv_spr_0.png" id="2_ol8jn"]
[ext_resource type="Texture2D" uid="uid://wa2w7pbf2j3x" path="res://sprites/tv_on_spr_0.png" id="3_akncc"]
[ext_resource type="Texture2D" uid="uid://1c03wmhmnsi8" path="res://sprites/tv_on_spr_1.png" id="4_bo8py"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="4_qjkvs"]
[ext_resource type="Texture2D" uid="uid://da14xud8tdoj" path="res://sprites/arrows1.png" id="5_nhiuq"]
[ext_resource type="Texture2D" uid="uid://cmdhfhj47l7gk" path="res://sprites/tv_on_spr_2.png" id="5_qu5ph"]
[ext_resource type="Texture2D" uid="uid://b74uo51q2y58i" path="res://sprites/arrows2.png" id="6_k56nx"]
[ext_resource type="Texture2D" uid="uid://dqnl71njea3l8" path="res://sprites/tv_on_spr_3.png" id="6_ot31d"]
[ext_resource type="Texture2D" uid="uid://d0euxtvr3sflq" path="res://sprites/tv_on_spr_4.png" id="7_7vxh4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3es1"]
size = Vector2(52, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_t7d8p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ol8jn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_akncc")
}, {
"duration": 1.0,
"texture": ExtResource("4_bo8py")
}, {
"duration": 1.0,
"texture": ExtResource("5_qu5ph")
}, {
"duration": 1.0,
"texture": ExtResource("6_ot31d")
}, {
"duration": 1.0,
"texture": ExtResource("7_7vxh4")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nw0se"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nhiuq")
}, {
"duration": 1.0,
"texture": ExtResource("6_k56nx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nd76e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ol8jn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Television" type="Area2D"]
position = Vector2(480, 351)
script = ExtResource("1_t1jwo")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(1, -24)
shape = SubResource("RectangleShape2D_n3es1")

[node name="Computer" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 4)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_t7d8p")
offset = Vector2(1, -18)

[node name="back2" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -303.0
offset_top = -120.0
offset_right = 247.0
offset_bottom = -41.0

[node name="back" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -302.0
offset_top = -119.0
offset_right = 246.0
offset_bottom = -42.0
color = Color(0, 0, 0, 1)

[node name="lbl_item" type="Label" parent="back"]
layout_mode = 0
offset_left = 64.0
offset_top = 2.0
offset_right = 488.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("4_qjkvs")
text = "== TELEVISION ==
You can watch movies"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="arrows" type="AnimatedSprite2D" parent="back"]
position = Vector2(520, 39)
sprite_frames = SubResource("SpriteFrames_nw0se")
autoplay = "default"

[node name="sprite" type="AnimatedSprite2D" parent="back"]
position = Vector2(37, 36)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_nd76e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
